[metadata]
name = baybars
author = Bugra Akyildiz
author-email = bugra.akyildiz@jet.com
summary = Python Common Packages that we use at Jet
description-file = README.md
home-page = https://github.com/jet/baybars
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License

[wheel]
universal = 1